fix links wrap issue

--- a/gatsby-site/src/components/header/header.scss
+++ b/gatsby-site/src/components/header/header.scss
@@ -32,6 +32,7 @@
     .nav-links {
       a {
         @include content-font;
+        white-space: nowrap;
       }
     }
  }
